Colaboratory를 통해 생성됨

--- a/Untitled30.ipynb
+++ b/Untitled30.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7TSKiVFGl5bpIleukME5x",
+      "authorship_tag": "ABX9TyMAWj4WBPZwgO0AmxXfiNZm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5341,9 +5341,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T-q5upfxu7cp",
-        "outputId": "0737b343-b4a6-4e2e-e665-96d521598cda"
+        "outputId": "66e9a293-464f-4348-9578-82e70100e8ce"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -5355,7 +5355,7 @@
             "3 True\n",
             "4 True\n",
             "5 True\n",
-            "  3/163 [..............................] - ETA: 7:30 - loss: 3.9994 - accuracy: 0.5312"
+            "163/163 [==============================] - 193s 1s/step - loss: 0.2819 - accuracy: 0.9279 - val_loss: 0.6335 - val_accuracy: 0.8638 - lr: 1.0000e-04\n"
           ]
         }
       ]
@@ -5374,12 +5374,12 @@
         "y_test=[]\n",
         "y_pred=[]\n",
         "# X_test = tf.zeros(shape=(128,128,3), name=None)  #\n",
-        "X_test = np.empty((224,224,3), int)"
+        "X_test = np.empty((224,224,1), int)"
       ],
       "metadata": {
         "id": "NL5RE9wcu9j1"
       },
-      "execution_count": 11,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -5406,24 +5406,10 @@
         "print(\"예측값=\", y_pred[0]) #, np.round(y_pred0[0]))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KMtX4VbzvBY2",
-        "outputId": "f3cefbf5-300f-41ea-edc2-94f20f65a2ca"
+        "id": "KMtX4VbzvBY2"
       },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "624 624 (139999, 224, 3)\n",
-            "정답= 0\n",
-            "예측값= 0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
